// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StripeFeeStructure constructor returns the expected structure when passing both 1`] = `
CommitchangeStripeFeeStructure {
  "props": Object {
    "flatFee": 30,
    "percentFee": 0.02,
  },
}
`;

exports[`StripeFeeStructure constructor returns the expected structure when passing flatFee 1`] = `
CommitchangeStripeFeeStructure {
  "props": Object {
    "flatFee": 30,
    "percentFee": 0,
  },
}
`;

exports[`StripeFeeStructure constructor returns the expected structure when passing percentFee 1`] = `
CommitchangeStripeFeeStructure {
  "props": Object {
    "flatFee": 0,
    "percentFee": 0.02,
  },
}
`;
